@@ -1,3 +1,8 @@
+2004-10-30  Andrew Cagney  <cagney@gnu.org>
+
+	* mips-tdep.c (read_signed_register): Use
+	regcache_cooked_read_signed.
+
 2004-10-30  Mark Kettenis  <kettenis@gnu.org>
 
 	* mipsread.c: Cleanup coding style.
